# VulpesCore

./: .gitignore  CMakeLists.txt  LICENSE
include/vulpes/: VPS_Compare_Utils.h  VPS_ConcurrentDictionary.h  VPS_Data.h  VPS_DataReader.h  VPS_DataWriter.h  VPS_Decoder.h  VPS_Decoder_Base256.h  VPS_Dictionary.h  VPS_Endian.h  VPS_Hash_Utils.h  VPS_List.h  VPS_Point.h  VPS_Rect.h  VPS_ScopedDictionary.h  VPS_Set.h  VPS_Size.h  VPS_StreamReader.h  VPS_StreamWriter.h  VPS_SwissDictionary.h  VPS_Types.h
src/: VPS_Compare_Utils.c  VPS_ConcurrentDictionary.c  VPS_Data.c  VPS_DataReader.c  VPS_DataWriter.c  VPS_Decoder.c  VPS_Decoder_Base256.c  VPS_Dictionary.c  VPS_Endian.c  VPS_Hash_Utils.c  VPS_List.c  VPS_ScopedDictionary.c  VPS_Set.c  VPS_StreamReader.c  VPS_StreamWriter.c  VPS_SwissDictionary.c
test/: CMakeLists.txt  Test.h  main.c  test_VPS_ConcurrentDictionary.c  test_VPS_Data.c  test_VPS_DataReader.c  test_VPS_Dictionary.c  test_VPS_Endian.c  test_VPS_List.c  test_VPS_ScopedDictionary.c  test_VPS_Set.c  test_VPS_StreamReader.c  test_VPS_StreamWriter.c  test_VPS_SwissDictionary.c
